# micro_ros_setup

./: CMakeLists.txt
config/host_zenoh/generic/: client_host_packages.repos  create.sh  package.xml
config/raspbian/generic/: create.sh
config/zenoh/host/: build.sh  client_host_packages.repos  create.sh  package.xml
config/zenoh/patches/rcutils/: 0001-disable-CMAKE_DL_LIBS-entry-for-build-rmw_zeonh_pico.patch
config/zenoh/patches/zenohpico/: 0001-change-package-name.patch  0002-append-cmake-value-for-rmw_zenoh_pico-with-colcon.patch
config/zenoh/raspbian/: build.sh  configure.sh  create.sh  package.xml  supported_platforms
scripts/: build_firmware.sh  clean_env.sh  configure_firmware.sh  create_firmware_ws.sh
