<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>firmware</name>
  <version>0.0.0</version>
  <description>Micro-ROS dependecies for Raspbian platforms using rmw_zenoh and zenoh-pico</description>
  <maintainer email="v-yamazaki8668@esol.co.jp">Katsumi Yamazaki</maintainer>
  <maintainer email="k-yokoyama@esol.co.jp">Koichiro Yokoyama</maintainer>
  <license>APL2</license>

  <depend>file</depend>
</package>
